[package]
name = "sharf"
version = "0.1.0"
authors = ["Meno Abels <meno.abels@adviser.com>"]

[dependencies]
crypto-hash = "0.3.0"
postgres = "0.14"
num = "0.1.32"
num-traits = "0.1.32"
num-integer = "0.1.32"
#diesel = { version = "0.13.0", features = ["postgres"] }
#diesel_codegen = { version = "0.13.0", features = ["postgres"] }
#dotenv = "0.9.0"
num_cpus = "1.6.2"
